Add explicit bcrypt==4.0.1 dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ httpx>=0.28.1
 # Authentication & Security
 python-jose[cryptography]
 passlib[bcrypt]
+bcrypt==4.0.1
 # Scheduling
 apscheduler
 # Phase 8A — AI Intelligence
